SVN $Id$
SVN $URL$
===============================================================================
Tag Creator: mlevy
Developers:  klindsay
Tag Date:    30 Apr 2015
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20150430
Tag Summary: extend support for r8 0d IO to handle time dimension, add support
             for r4 0d IO (with and without time dimension), add tavg support
             for r4 and r8 0d variables, and add tavg output for existing 0d
             running_mean test variable

Files Modified:
M       source/io_netcdf.F90
M       source/io_types.F90
M       source/running_mean_mod.F90
M       source/tavg.F90
===============================================================================
Tag Creator: mlevy
Developers:  mlevy
Tag Date:    29 Apr 2015
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20150429b
Tag Summary: Clean up unnecessary variables in configure script, print changes
             that come from OCN_TRACER_MODULES_OPT to screen

Files Modified:
M       bld/configure
===============================================================================
Tag Creator: mlevy
Developers:  mlevy
Tag Date:    29 Apr 2015
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20150429a
Tag Summary: A few improvements to IRF and configure
             * Change dimensions from (IRF_NT) to (:) on intent(in) and
               intent(inout) variables; remove possibility for compiler error
               if IRF_NT = 0
             * Improve error checking for OCN_TRACER_MODULES and
               OCN_TRACER_MODULES_OPT in configure; now get error message if you
               try to activate a module or set an option that configure does not
               recognize.

Files Modified:
M       bld/configure
M       source/IRF_mod.F90
===============================================================================
Tag Creator: mlevy
Developers:  mlevy
Tag Date:    29 Apr 2015
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20150429
Tag Summary: Bugfixes in IRF set-up