@@ -2,6 +2,17 @@ SVN $Id$
 SVN $URL$
 ===============================================================================
 Tag Creator: mlevy
+Developers:  huyong
+Tag Date:    6 May 2015
+Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20150506
+Tag Summary: Bugfix for exact restarts with CSI solver
+
+Files Modified:
+M       source/POP_SolversMod.F90
+M       source/barotropic.F90
+M       source/initial.F90
+===============================================================================
+Tag Creator: mlevy
 Developers:  klindsay
 Tag Date:    30 Apr 2015
 Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20150430
